# nowasm

./: Cargo.toml  LICENSE  README.md
examples/: call.rs  call_hello.rs  decode.rs  execute.rs  inspect.rs
examples/wasm/: add.rs  fib.rs  hello.rs
src/: components.rs  decode.rs  decode_error.rs  execute.rs  execution.rs  instance.rs  instructions.rs  instructions_sign_extension.rs  lib.rs  module.rs  module_instance.rs  module_spec.rs  reader.rs  sections.rs  sign_extension.rs  symbols.rs  validate.rs  validation.rs  vector.rs  vectors.rs  writer.rs
testdata/: README.md  binary.json  imports.json
tests/: decode.rs  testcase.rs
