[package]
name = "nowasm"
version = "0.1.0"
edition = "2021"
categories = ["no-std"]

[features]
default = ["std", "sign_extension"]
sign_extension = []
std = []

[[example]]
name = "add"
path = "examples/wasm/add.rs"
crate-type = ["lib", "cdylib"]

[[example]]
name = "hello"
path = "examples/wasm/hello.rs"
crate-type = ["lib", "cdylib"]

[dependencies]

[dev-dependencies]
clap = { version = "4.5.7", features = ["derive"] }
orfail = "1.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
