[package]
name = "nowasm"
version = "0.0.1"
edition = "2021"
categories = ["no-std"]
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "No-std, no-unsafe and no-dependencies WebAssembly 1.0 runtime library"
homepage = "https://github.com/sile/nowasm"
repository = "https://github.com/sile/nowasm"
readme = "README.md"

[features]
default = ["std", "sign_extension"]
sign_extension = []
std = []

[[example]]
name = "add"
path = "examples/wasm/add.rs"
crate-type = ["cdylib"]

[[example]]
name = "fib"
path = "examples/wasm/fib.rs"
crate-type = ["cdylib"]

[[example]]
name = "hello"
path = "examples/wasm/hello.rs"
crate-type = ["cdylib"]

[dependencies]

[dev-dependencies]
clap = { version = "4.5.7", features = ["derive"] }
orfail = "1.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
